--- a/src/pages/admin/config.yml
+++ b/src/pages/admin/config.yml
@@ -20,7 +20,6 @@ collections:
     name: things
     create: true
     folder: src/pages/things
-    preview_path: "things/{{ slug }}"
     fields:
       -
         widget: string
@@ -39,3 +38,8 @@ collections:
             widget: text
             label: Description
             name: description
+      -
+        widget: string
+        label: Permalink
+        name: permalink
+        pattern: ['[0-9a-zA-Z]*', 'Allowed characters: 0-9, a-z and hyphens (-). No spaces.']
