--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-clean": "^1.1.0",
     "postcss-cli": "^8.2.0",
     "postcss-preset-env": "^6.7.0",
+    "slugify": "^1.4.6",
     "tailwindcss": "^1.9.6"
   }
 }
