update config file

--- a/src/pages/admin/config.yml
+++ b/src/pages/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: redesign
+  branch: master
 
 site_url: "https://brutus-things-11ty.netlify.app"
 display_url: "https://brutus-things-11ty.netlify.app"
